# jupyter-labs-1sem

./: .gitignore  .gitmodules  assert.h  demo.ipynb  environment.yml  images.h  labs_common.h  readme.md
demo/: demo.ipynb
lab1/: helper.h  lab1.ipynb
lab2/: CMakeLists.txt  lab2.ipynb  lab2.md  lab_helpers.h  z2_image_processing.cpp
labs_common/: all.h  assert.h  images.h  matplotlib.h  media.h  testing.h
