cmake_minimum_required(VERSION 3.20)
project(lab2)

set(CMAKE_CXX_STANDARD 17)

add_executable(digit_sum z1_1_digit_sum.cpp)
add_executable(gcd z1_2_gcd.cpp)
add_executable(count_unique z1_3_count_unique.cpp)
add_executable(reverse z1_4_reverse.cpp)
add_executable(matrix z1_5_matrix.cpp)
add_executable(image_processing z2_image_processing.cpp)
add_executable(fractal z3_fractal.cpp)

